--- a/Session4Demo/app/build.gradle
+++ b/Session4Demo/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "24.0.2"
     defaultConfig {
-        applicationId "com.adityadua.session3components"
+        applicationId "com.adityadua.session4demo"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -25,6 +25,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
     testCompile 'junit:junit:4.12'
 }
